fix: stamp 조회시 조회되지 않던 오류 수정